[package]
name = "example-template-tera"
version = "0.0.0"
edition = "2018"
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
publish = false

[[bin]]
name = "template-tera"
path = "src/main.rs"
doc = false

[dependencies]
failure = "0.1.2"
finchers = "0.12.0-alpha.6"
futures = "0.1.24"
http = "0.1.10"
serde = "1.0"
tera = "0.11.12"
