[package]
name = "example-template-tera"
version = "0.0.0"
edition = "2018"
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
publish = false

[[bin]]
name = "template-tera"
path = "src/main.rs"
doc = false

[dependencies]
finchers = "0.12.0-alpha.8"
finchers-template-tera = "0.1.0-dev"
tera = "0.11.16"
